Webpage Layout issue resolved

--- a/webapp/src/components/Stack/Stack.css
+++ b/webapp/src/components/Stack/Stack.css
@@ -1,13 +1,14 @@
 .stack-parent {
   display: flex;
-  height: 90vh;
-  width: 210px;
-  padding: 10px;
+  height: 80vh;
+  padding: 0px;
   flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 12px;
+  align-items: center;
+  gap: 10px;
   border: 1px solid #4f4f4f;
+  margin-right: 40px;
+  transform: scale(0.9);
+
   /* background: #1e1e1e; */
 }
 
@@ -24,12 +25,12 @@
 .stack {
   display: flex;
   width: 189px;
-  height: 100%;
-  padding: 10px;
+  height: 60vh;
+  padding: 10px 10px 10px 10px;
   flex-direction: column;
   align-items: flex-start;
   gap: 11px;
   border: 1px solid var(--Gray-2, #4f4f4f);
-
   overflow-y: scroll;
+
 }
