--- a/webapp/src/components/Terminal/Terminal.css
+++ b/webapp/src/components/Terminal/Terminal.css
@@ -1,8 +1,8 @@
 .terminal {
   width: 55vw;
-  height: 234px;
+  height: 305px;
   flex-shrink: 0;
-  padding-left: 30px;
-  padding-right: 30px;
-  padding-bottom: 50px;
+  padding-left: 0px;
+  padding-right: 00px;
+  padding-bottom: 00px;
 }
